Bug 471304 - appstream:/ URIs don't open Discover in Plasma 6
Summary: appstream:/ URIs don't open Discover in Plasma 6
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 471873 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-21 18:43 UTC by Nate Graham
Modified: 2023-07-03 16:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-06-21 18:43:06 UTC
STEPS TO REPRODUCE
1. run `xdg-open appstream://io.github.endless_sky.endless_sky`


OBSERVED RESULT
Nothing happens.


EXPECTED RESULT
Discover opens with that URI.


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 38
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Kernel Version: 6.3.6-200.fc38.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-10510U CPU @ 1.80GHz
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics


ADDITIONAL INFORMATION
This worked in Plasma 5, so it's a regression somewhere in Discover, KF6, or Qt5.
Comment 1 Nicolas Fella 2023-07-02 19:52:41 UTC
*** Bug 471873 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2023-07-02 22:42:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kservice/-/merge_requests/149
Comment 3 Nicolas Fella 2023-07-03 16:17:08 UTC
Git commit 2b160010fab9f6ae40e1d4ff974d6b177be68a9c by Nicolas Fella.
Committed on 02/07/2023 at 22:41.
Pushed by cullmann into branch 'master'.

Fix querying scheme handlers via KApplicationTrader

Don't filter them out in _k_accessServiceTypes, we need them

M  +19   -0    autotests/kapplicationtradertest.cpp
M  +1    -11   src/services/kservice.cpp

https://invent.kde.org/frameworks/kservice/-/commit/2b160010fab9f6ae40e1d4ff974d6b177be68a9c