Fix querying scheme handlers via KApplicationTrader

Don't filter them out in _k_accessServiceTypes, we need them

BUG: 471304